update user auth

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -5,4 +5,5 @@
     </script>
 <% end %>
 
-<main id="root"></main>
+<script type="text/javascript">window.logo = "<%= image_url("taut_logo.png") %>"</script>
+<main id="root">React is not working.</main>
