--- a/app/assets/stylesheets/signin_form.css
+++ b/app/assets/stylesheets/signin_form.css
@@ -1,5 +1,5 @@
 body {
-    background-color: beige;
+    background-color: rgb(245, 245, 227);
 }
 
 .signin-form-container {
@@ -21,7 +21,7 @@ body {
     top: 10%;
     left: 37.5%;
     width: 25%;
-    height: 44%;
+    height: 42%;
     box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
               0 2px 2px rgba(0,0,0,0.12), 
               0 4px 4px rgba(0,0,0,0.12), 
