--- a/app/assets/stylesheets/front_page.css
+++ b/app/assets/stylesheets/front_page.css
@@ -31,7 +31,7 @@
 }
 
 .front-page .navbar .logo-box .logo {
-    display: inline-block
+    display: inline-block;
     height: 30px;
     width: 30px;
     top: 50%;
