--- a/app/assets/stylesheets/signup_form.css
+++ b/app/assets/stylesheets/signup_form.css
@@ -60,7 +60,7 @@ body {
 }
 
 .signup-form-container input {
-    border: 2px solid purple;
+    border: 2px solid rgb(131, 98, 131);
     border-radius: 4px;
     height: 25px;
     width: 40%;
