--- a/app/assets/stylesheets/main_page.css
+++ b/app/assets/stylesheets/main_page.css
@@ -1,4 +1,20 @@
-.main-page > img {
-    width: 50%;
-    height: auto;
+.main-page {
+
+}
+
+.main-page-content {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.main-page-channel-list {
+    width: 300px;
+    float: left;
+}
+
+.main-page-message-area {
+    display: flex;
+    justify-content: space-between;
+    float: right;
 }
