--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,7 @@
 
  @import "reset.css";
  @import "front_page.css";
+ @import "main_page.css";
+ @import "channel.css";
  @import "signin_form.css";
  @import "signup_form.css";
