--- a/app/assets/stylesheets/main_page.css
+++ b/app/assets/stylesheets/main_page.css
@@ -181,3 +181,24 @@
 .channel-form .back-button:hover {
     cursor: pointer;
 }
+
+.main-page .welcome-message {
+    width: 70%;
+    min-height: 100%;
+    padding: 30px;
+    text-align: center;
+}
+
+.main-page .welcome-message h1 {
+    padding-top: 55px;
+    padding-bottom: 20px;
+    font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
+    font-size: 35px;
+    font-weight: 700;
+    color: #701670;
+}
+
+.main-page .welcome-message h2 {
+    font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
+    font-size: 20px;
+}
