--- a/app/assets/stylesheets/main_page.css
+++ b/app/assets/stylesheets/main_page.css
@@ -1,5 +1,6 @@
 .main-page {
-    min-height: 100%;
+    position: fixed;
+    height: 98vh;
     margin-left: 15%;
     margin-right: 15%;
     background-color:  rgb(219, 208, 218);
