--- a/app/assets/stylesheets/channel.css
+++ b/app/assets/stylesheets/channel.css
@@ -1,8 +1,8 @@
 .channel {
   position: fixed;
-  height: 98vh;
+  height: 85vh;
   margin-left: 15%;
-  margin-right: 15%;
+  width: 70%;
   background-color:  rgb(219, 208, 218);
   box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
               0 2px 2px rgba(0,0,0,0.12), 
@@ -87,7 +87,7 @@
 
 .channel .channel-list-container {
   width: 30%;
-  min-height: 100%;
+  height: 85vh;
   background-color: rgb(204, 204, 193);
   background-size: 100%;
 }
