--- a/app/assets/stylesheets/channel.css
+++ b/app/assets/stylesheets/channel.css
@@ -82,7 +82,7 @@
 .channel .channel-2 {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 85vh;
 }
 
 .channel .channel-2 .channel-container {
