--- a/app/assets/stylesheets/channel.css
+++ b/app/assets/stylesheets/channel.css
@@ -1,8 +1,7 @@
 .channel {
-  position: fixed;
-  height: 85vh;
+  min-height: 100%;
   margin-left: 15%;
-  width: 70%;
+  margin-right: 15%;
   background-color:  rgb(219, 208, 218);
   box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
               0 2px 2px rgba(0,0,0,0.12), 
@@ -82,23 +81,18 @@
 .channel .channel-2 {
   display: flex;
   width: 100%;
-  height: 85vh;
-}
-
-.channel .channel-2 .channel-container {
-  height: 85vh;
+  height: 100%;
 }
 
 .channel .channel-list-container {
   width: 30%;
-  height: 85vh;
+  min-height: 100%;
   background-color: rgb(204, 204, 193);
   background-size: 100%;
 }
 
 .channel .channel-list-container .channel-list {
   padding: 8px;
-  height: 85vh;
 }
 
 .channel .channel-list-container .channel-list .channel-links {
