add fontawesome script

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -6,4 +6,5 @@
 <% end %>
 
 <script type="text/javascript">window.logo = "<%= image_url("taut_logo.png") %>"</script>
+<script src="https://kit.fontawesome.com/7275b6aa0a.js" crossorigin="anonymous"></script>
 <main id="root">React is not working.</main>
