--- a/app/assets/stylesheets/channel.css
+++ b/app/assets/stylesheets/channel.css
@@ -1,5 +1,6 @@
 .channel {
-  min-height: 100%;
+  min-height: 70%;
+  min-width: 70%;
   margin-left: 15%;
   margin-right: 15%;
   background-color:  rgb(219, 208, 218);
@@ -8,6 +9,7 @@
               0 4px 4px rgba(0,0,0,0.12), 
               0 8px 8px rgba(0,0,0,0.12),
               0 16px 16px rgba(0,0,0,0.12);
+  position: absolute;
 }
 
 .channel .header {
@@ -76,21 +78,21 @@
 }
 
 .channel .channel-2 {
-  display: flex;
+  display: inline-block;
   width: 100%;
-  height: 100%;
 }
 
 .channel .channel-list-container {
   width: 30%;
-  min-height: 100%;
+  height: 77vh;
   background-color: rgb(204, 204, 193);
-  background-size: 100%;
-  position: relative;
+  float: left;
 }
 
 .channel .channel-list-container .channel-list {
   padding: 8px;
+  overflow-y: auto;
+  height: 98%;
 }
 
 .channel .channel-list-container .channel-list .channel-links {
@@ -181,9 +183,10 @@
 }
 
 .channel .channel-container {
-  width: 70%;
-  min-height: 100%;
-  padding: 8px;
+  width: 67%;
+  height: 75vh;
+  float: right;
+  padding-right: 20px;
 }
 
 .channel .message-area {
@@ -191,17 +194,45 @@
   padding-top: 5px;
   padding-right: 5px;
   padding-bottom: 3px;
+  height: 90%;
 }
 
 .channel .message-header {
   padding-bottom: 10px;
   font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
+  display: inline-block;
+  width: 100%;
+}
+
+.channel .message-header-part1 {
+  float: left;
+  width: 95%;
 }
 
 .channel .message-header-welcome {
   padding-bottom: 5px;
   font-size: 20px;
   font-weight: 700;
+}
+
+/* .channel .message-header-message {
+  margin-top: 5px;
+  font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
+} */
+
+.channel .message-header-part2 {
+  float: right;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.channel .message-header-delete .delete-channel-button {
+  cursor: pointer;
+}
+
+.message-box {
+  overflow-y: auto;
+  height: 55vh;
 }
 
 .message {
@@ -247,4 +278,16 @@
   width: 100%;
   font-size: 15px;
   font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
+}
+
+.channel .social {
+  background-color: #F6EFE8;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
+}
+
+.channel .social h2 {
+  font-size: 15px;
 }
