--- a/app/assets/stylesheets/front_page.css
+++ b/app/assets/stylesheets/front_page.css
@@ -200,3 +200,35 @@
     font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
     font-size: 17px;
 }
+
+.front-page .frontpage-social {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    margin-top: 50px;
+    padding-bottom: 50px;
+    font-size: 20px;
+    font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
+}
+
+.front-page .mainpage-link {
+    margin-left: 30px;
+}
+
+.front-page .mainpage-link a {
+    padding: 12px 15px 12px 15px;
+    color: white;
+    background-color: #6f4974;
+    text-decoration: none;
+    margin: 5px;
+    border-radius: 4px;
+    font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 15px;
+    display: inline;
+}
+
+.hello-message {
+    font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif;
+}
