--- a/app/assets/stylesheets/signin_form.css
+++ b/app/assets/stylesheets/signin_form.css
@@ -21,7 +21,7 @@ body {
     top: 10%;
     left: 37.5%;
     width: 25%;
-    height: 42%;
+    min-height: 45%;
     box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
               0 2px 2px rgba(0,0,0,0.12), 
               0 4px 4px rgba(0,0,0,0.12), 
